kubernetes/apps/default/hajimari/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hajimari
  namespace: default
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: zerossl-prod
spec:
  # defaultBackend:
  #   service:
  #     name: hajimari
  #     port:
  #       number: 3000
  ingressClassName: traefik-ingresses
  rules:
  - host: hajimari.dartus.fr
    http:
      paths:
      - backend:
          service:
            name: hajimari
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - hajimari.dartus.fr
    secretName: hajimari.dartus.fr-tls
